2007-03-18 Borut Razem <borut.razem AT siol.net>

	* /packages/*/Makefile: house cleaning

2007-03-17 Borut Razem <borut.razem AT siol.net>

	* /packages/build.readline/*: added

2007-03-13 Borut Razem <borut.razem AT siol.net>

	* crontab.txt: added

2007-03-11 Borut Razem <borut.razem AT siol.net>

	* packages/packages.mk: defined LOCAL_DIR using $(HOME)/... instead of
	  ~/... so that --prefix=$(LOCAL_DIR) works
	* packages/build.nsis/Makefile: removed ABS_LOCAL_DIR

2007-03-07 Borut Razem <borut.razem AT siol.net>

	* packages/*: initial check in
	* packages/build.nsis/Makefile: defined ABS_LOCAL_DIR