@@ -1,10 +1,17 @@
 2007-03-18 Borut Razem <borut.razem AT siol.net>
 
-	* /packages/*/Makefile: house cleaning
+	* packages/*/Makefile: house cleaning
+	* packages/build.ncurses/*: added
+	* crontab.txt: added entry for mirror-doors host
+	* packages/packages.mk, packages/build.readline/Makefile:
+	  added support for universal binaries on Darwin
+	* packages/build.gpsim/Makefile:
+	  introduced CFLAGS, CXXFLAGS and LDFLAGS configure settings
 
 2007-03-17 Borut Razem <borut.razem AT siol.net>
 
-	* /packages/build.readline/*: added
+	* packages/build.readline/*: added
+	* crontab.txt: added mirror-doors line
 
 2007-03-13 Borut Razem <borut.razem AT siol.net>
 
